chore: make reviewable

--- a/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   name: vspherevalidators.validation.spectrocloud.labs
 spec:
   group: validation.spectrocloud.labs
@@ -20,14 +20,19 @@ spec:
         description: VsphereValidator is the Schema for the vspherevalidators API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -35,35 +40,56 @@ spec:
             description: VsphereValidatorSpec defines the desired state of VsphereValidator
             properties:
               auth:
+                description: VsphereAuth defines authentication configuration for
+                  an VsphereValidator.
                 properties:
                   secretName:
+                    description: SecretName is the name of the secret containing the
+                      vSphere credentials
                     type: string
                 required:
                 - secretName
                 type: object
               computeResourceRules:
                 items:
+                  description: ComputeResourceRule defines the compute resource validation
+                    rule
                   properties:
                     clusterName:
                       description: ClusterName is required when the vCenter Entity
                         resides beneath a Cluster in the vCenter object hierarchy
                       type: string
                     entityName:
+                      description: EntityName is the name of the entity to validate
                       type: string
                     name:
+                      description: Name is the name of the compute resource validation
+                        rule
                       type: string
                     nodepoolResourceRequirements:
+                      description: NodepoolResourceRequirements is the list of nodepool
+                        resource requirements
                       items:
+                        description: NodepoolResourceRequirement defines the resource
+                          requirements for a nodepool
                         properties:
                           cpu:
+                            description: CPU is the CPU requirement for the nodepool
                             type: string
                           diskSpace:
+                            description: DiskSpace is the disk space requirement for
+                              the nodepool
                             type: string
                           memory:
+                            description: Memory is the memory requirement for the
+                              nodepool
                             type: string
                           name:
+                            description: Name is the name of the nodepool
                             type: string
                           numberOfNodes:
+                            description: NumberOfNodes is the number of nodes in the
+                              nodepool
                             type: integer
                         required:
                         - cpu
@@ -74,6 +100,8 @@ spec:
                         type: object
                       type: array
                     scope:
+                      description: Scope is the scope of the compute resource validation
+                        rule
                       type: string
                   required:
                   - entityName
@@ -86,22 +114,31 @@ spec:
                 type: string
               entityPrivilegeValidationRules:
                 items:
+                  description: EntityPrivilegeValidationRule defines the entity privilege
+                    validation rule
                   properties:
                     clusterName:
                       description: ClusterName is required when the vCenter Entity
                         resides beneath a Cluster in the vCenter object hierarchy
                       type: string
                     entityName:
+                      description: EntityName is the name of the entity to validate
                       type: string
                     entityType:
+                      description: EntityType is the type of the entity to validate
                       type: string
                     name:
+                      description: Name is the name of the entity privilege validation
+                        rule
                       type: string
                     privileges:
+                      description: Privileges is the list of privileges to validate
+                        that the user has
                       items:
                         type: string
                       type: array
                     username:
+                      description: Username is the username to validate against
                       type: string
                   required:
                   - entityName
@@ -113,16 +150,20 @@ spec:
                 type: array
               ntpValidationRules:
                 items:
+                  description: NTPValidationRule defines the NTP validation rule
                   properties:
                     clusterName:
                       description: ClusterName is required when the vCenter Host(s)
                         reside beneath a Cluster in the vCenter object hierarchy
                       type: string
                     hosts:
+                      description: Hosts is the list of vCenter Hosts to validate
+                        NTP configuration
                       items:
                         type: string
                       type: array
                     name:
+                      description: Name is the name of the NTP validation rule
                       type: string
                   required:
                   - hosts
@@ -131,12 +172,17 @@ spec:
                 type: array
               rolePrivilegeValidationRules:
                 items:
+                  description: GenericRolePrivilegeValidationRule defines the generic
+                    role privilege validation rule
                   properties:
                     privileges:
+                      description: Privileges is the list of privileges to validate
+                        that the user has
                       items:
                         type: string
                       type: array
                     username:
+                      description: Username is the username to validate against
                       type: string
                   required:
                   - privileges
@@ -145,18 +191,23 @@ spec:
                 type: array
               tagValidationRules:
                 items:
+                  description: TagValidationRule defines the tag validation rule
                   properties:
                     clusterName:
                       description: ClusterName is required when the vCenter Entity
                         resides beneath a Cluster in the vCenter object hierarchy
                       type: string
                     entityName:
+                      description: EntityName is the name of the entity to validate
                       type: string
                     entityType:
+                      description: EntityType is the type of the entity to validate
                       type: string
                     name:
+                      description: Name is the name of the tag validation rule
                       type: string
                     tag:
+                      description: Tag is the tag to validate on the entity
                       type: string
                   required:
                   - entityName
