--- a/config/samples/vsphere-validator-ntp.yaml
+++ b/config/samples/vsphere-validator-ntp.yaml
@@ -7,6 +7,16 @@ metadata:
     app.kubernetes.io/part-of: validator-plugin-vsphere
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: validator-plugin-vsphere
-  name: vspherevalidator-sample
+  name: vspherevalidator-ntp
+  namespace: validator
 spec:
-  # TODO(user): Add fields here
+  datacenter: "Datacenter"
+  ntpValidationRules:
+    - name: "validate ntp on hosts"
+      clusterName: Cluster2
+      hosts:
+        - 10.10.20.110
+        - 10.10.20.111
+        - 10.10.20.112
+  auth:
+    secretName: vsphere-creds
