feat: finish adding enums, but add defaults to all switches anyway
Signed-off-by: Tyler Gillson <tyler.gillson@gmail.com>

--- a/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -122,6 +122,10 @@ spec:
                     scope:
                       description: Scope is the scope of the compute resource validation
                         rule
+                      enum:
+                      - cluster
+                      - host
+                      - resourcepool
                       type: string
                   required:
                   - entityName
